# bismuth

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/config/: bismuth_config.kcfg
src/core/: controller.cpp  ts-proxy.cpp  ts-proxy.hpp
src/core/plasma-api/: utils.hpp  workspace.cpp  workspace.hpp
src/effects/: CMakeLists.txt
src/effects/tiled/package/: metadata.desktop
src/effects/tiled/package/contents/code/: tiled.js
src/kcm/package/contents/ui/: Behaviour.qml
src/kdecoration/: decoration.cpp
src/kwinscript/: config.ts
src/kwinscript/controller/: action.ts  index.ts
src/kwinscript/driver/: index.ts  surface.ts  window.ts
src/kwinscript/engine/: index.ts  layout_store.ts  window.ts  window_store.ts
src/kwinscript/engine/layout/: index.ts  spiral_layout.ts  tile_layout.ts
src/kwinscript/ui/: main.qml  popup.qml
src/plasmoid/: CMakeLists.txt  bismuth.cpp  bismuth.h
src/plasmoid/icons/: CMakeLists.txt
src/plasmoid/package/: metadata.desktop
src/plasmoid/package/contents/config/: config.qml  main.xml
src/plasmoid/package/contents/ui/: FullRepresentation.qml  GeneralConfig.qml  main.qml
